backend/static/scss/_benefits_panel.scss
.benefits-card-spacing {
	margin-bottom: 1.25rem;
}

.benefits-card-padding {
	padding: 1.75rem;
}

.benefits-card-margin-bottom {
	margin-bottom: 1.75rem;
}

.benefits-card-wrapper {
	min-height: 3.625rem; // 4 lines of text at 1.125rem font size with line-height of 1.5
}

.benefits-card-bottom-image {
	margin: auto -1.75rem -1.75rem -1.75rem;
	overflow: hidden;
	border-radius: 0 0 var(--bs-card-border-radius) var(--bs-card-border-radius);

	img {
		display: block;
		width: 100%;
	}
}

.benefits-card-top-image {
	margin: 0rem 0rem 1.75rem 0;
	overflow: hidden;
	border-radius: var(--bs-card-border-radius) var(--bs-card-border-radius) 0 0;

	width: 100%;
	aspect-ratio: 5 / 3; // height is 60% of the width

	img {
		display: block;
		width: 100%;
		height: 100%;
		object-fit: contain; // scale down so the image is fully contained
		object-position: center center;
	}
}

.benefits-card.bg-primary {
	a {
		@extend .btn-outline-secondary;
		color: var(--bs-secondary);

		&:hover {
			background-color: var(--bs-secondary);
			color: white;
		}
	}
}

